--- a/000_data_cleaning_and_EDA.ipynb
+++ b/000_data_cleaning_and_EDA.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "557e0c38-2d1c-413d-a740-30753f7e599a",
    "metadata": {},
    "outputs": [],
@@ -72,52 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f3385b7c-91f0-4477-932b-0b1ffa97b3f4",
+   "execution_count": null,
+   "id": "c334bc2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Here the 20 csv generated from the Web scraping script I used are uploaded and then concatenated in one unique dataframe called df_italia\n",
-    "\n",
-    "df_1 = pd.read_csv('01_rent_milano.csv')\n",
-    "df_2 = pd.read_csv('02_rent_roma.csv')\n",
-    "df_3 = pd.read_csv('03_rent_torino.csv')\n",
-    "df_4 = pd.read_csv('04_rent_genova.csv')\n",
-    "df_5 = pd.read_csv('05_rent_napoli.csv')\n",
-    "\n",
-    "df_6 = pd.read_csv('06_rent_palermo.csv')\n",
-    "df_7 = pd.read_csv('07_rent_bologna.csv')\n",
-    "df_8 = pd.read_csv('08_rent_firenze.csv')\n",
-    "df_9 = pd.read_csv('09_rent_bari.csv')\n",
-    "df_10 = pd.read_csv('10_rent_catania.csv')\n",
-    "\n",
-    "df_11 = pd.read_csv('11_rent_verona.csv')\n",
-    "df_12 = pd.read_csv('12_rent_venezia.csv')\n",
-    "df_13 = pd.read_csv('13_rent_messina.csv')\n",
-    "df_14 = pd.read_csv('14_rent_padova.csv')\n",
-    "df_15 = pd.read_csv('15_rent_trieste.csv')\n",
-    "\n",
-    "df_16 = pd.read_csv('16_rent_parma.csv')\n",
-    "df_17 = pd.read_csv('17_rent_brescia.csv')\n",
-    "df_18 = pd.read_csv('18_rent_prato.csv')\n",
-    "df_19 = pd.read_csv('19_rent_taranto.csv')\n",
-    "df_20 = pd.read_csv('20_rent_modena.csv')"
+    "df_italia = pd.read_csv('D001_RAW_DATASET.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "fcf8715d-6f3a-4fcb-a14c-d61e94323208",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_italia = pd.concat([df_1, df_2, df_3, df_4, df_5, df_6, df_7, df_8, df_9, df_10,\n",
-    "                      df_11, df_12, df_13, df_14, df_15, df_16, df_17, df_18, df_19, df_20], axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "bb22b54e-d9cd-429d-a782-1182b66fa7f3",
    "metadata": {},
    "outputs": [
@@ -222,7 +187,7 @@
        "4     45.0         NaN     3  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
