pushing first two baseline notebooks

--- a/001_v1_baseline.ipynb
+++ b/001_v1_baseline.ipynb
@@ -438,6 +438,320 @@
     "\n",
     "df_metrics = df_metrics.append({'Algorithm':'Decision Tree Regressor TEST', 'MAE €':mae, 'MSE €': mse,  'RMSE €': rmse, 'MAPE %': mape, 'R2 Score %': r2}, ignore_index=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd06e8d9-8aeb-41a4-9997-9548044a6d38",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47842cb5-fbe5-400a-a613-b463fec730e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestRegressor()\n",
+    "\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "param_grid ={\n",
+    "     'n_estimators':[ 50, 100, 150],\n",
+    "    'min_samples_split': [2, 4, 6, 8],\n",
+    "    'min_samples_leaf': [2, 4, 6, 8],\n",
+    "    'max_features': [1.0, 2.0, 3.0],\n",
+    "    'max_depth': [5, 10, 20],\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(rf, param_grid, cv=5, scoring = 'neg_mean_squared_error') \n",
+    "\n",
+    "grid_search.fit(X_train , Y_train )\n",
+    "\n",
+    "print(grid_search.best_params_)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "duration = end_time - start_time\n",
+    "print(duration/60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "347c867f-7e69-4f31-95ef-4e77a6d64673",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "rf = RandomForestRegressor(n_estimators= 150, min_samples_split= 2 , min_samples_leaf= 4, max_features= 1.0, max_depth = 10, random_state=RANDOM_STATE)\n",
+    "rf.fit(X_train , Y_train )\n",
+    "\n",
+    "y_train_pred = rf.predict(X_train)\n",
+    "\n",
+    "mae = round(mean_absolute_error(Y_train,y_train_pred), 2) \n",
+    "mse = round(mean_squared_error(Y_train,y_train_pred) , 2) \n",
+    "mape = round(mean_absolute_percentage_error(Y_train,y_train_pred)*100,2)\n",
+    "r2 = round(r2_score(Y_train,y_train_pred)*100,2)\n",
+    "rmse = round(math.sqrt(mse) , 2) \n",
+    "\n",
+    "\n",
+    "print(f\"MAE is: {mae}\")\n",
+    "print(f\"MSE is: {mse}\")\n",
+    "print(f\"MAPE is: {mape}\")\n",
+    "print(f\"R2 SCORE is: {r2}\")\n",
+    "print(f\"RMSE is: {rmse}\")\n",
+    "\n",
+    "df_metrics = df_metrics.append({'Algorithm':'Random Forest Regressor TRAIN', 'MAE €':mae, 'MSE €': mse,  'RMSE €': rmse, 'MAPE %': mape, 'R2 Score %': r2 }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd0254a6-731d-4901-b767-4c8a3872304a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = rf.predict(X_val)\n",
+    "\n",
+    "mae = round( mean_absolute_error(Y_val,y_pred), 2) \n",
+    "mse = round(mean_squared_error(Y_val,y_pred), 2) \n",
+    "mape = round(mean_absolute_percentage_error(Y_val,y_pred)*100,2)\n",
+    "r2 = round(r2_score(Y_val,y_pred), 2)*100\n",
+    "rmse = round(math.sqrt(mse), 2) \n",
+    "\n",
+    "\n",
+    "print(f\"MAE is: {mae}\")\n",
+    "print(f\"MSE is: {mse}\")\n",
+    "print(f\"MAPE is: {mape}\")\n",
+    "print(f\"R2 SCORE is: {r2}\")\n",
+    "print(f\"RMSE is: {rmse}\")\n",
+    "\n",
+    "\n",
+    "df_metrics = df_metrics.append({'Algorithm':'Random Forest Regressor TEST', 'MAE €':mae, 'MSE €': mse,  'RMSE €': rmse, 'MAPE %': mape, 'R2 Score %': r2 }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c36f71f2-d822-4646-84eb-aa8ba23b3419",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "559529a1-4948-4567-90c6-0c7af62ad23a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb = XGBRegressor()\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "\n",
+    "param_grid ={\n",
+    "    'n_estimators': [50, 100, 150],\n",
+    "    'learning_rate': [0.01, 0.1, 1]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(xgb, param_grid, cv=5, scoring = 'neg_mean_squared_error') \n",
+    "\n",
+    "grid_search.fit(X_train , Y_train )\n",
+    "\n",
+    "print(grid_search.best_params_)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "duration = end_time - start_time\n",
+    "print(duration/60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01d81e37-1a9f-44b7-82bc-7d233b13801b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb = XGBRegressor(n_estimators= 150, eta=0.1)\n",
+    "xgb.fit(X_train , Y_train )\n",
+    "\n",
+    "y_train_pred = xgb.predict(X_train)\n",
+    "\n",
+    "mae = round( mean_absolute_error(Y_train,y_train_pred), 2)\n",
+    "mse = round(mean_squared_error(Y_train,y_train_pred), 2)\n",
+    "mape = round(mean_absolute_percentage_error(Y_train,y_train_pred)*100,2)\n",
+    "r2 = round(r2_score(Y_train,y_train_pred)*100,2)\n",
+    "rmse = round(math.sqrt(mse), 2)\n",
+    "\n",
+    "\n",
+    "print(f\"MAE is: {mae}\")\n",
+    "print(f\"MSE is: {mse}\")\n",
+    "print(f\"MAPE is: {mape}\")\n",
+    "print(f\"R2 SCORE is: {r2}\")\n",
+    "print(f\"RMSE is: {rmse}\")\n",
+    "\n",
+    "df_metrics = df_metrics.append({'Algorithm':'XGB Regressor TRAIN', 'MAE €':mae, 'MSE €': mse,  'RMSE €': rmse, 'MAPE %': mape, 'R2 Score %': r2 }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b532a16-9ff3-412d-9501-54f3def840e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = xgb.predict(X_test)\n",
+    "\n",
+    "mae = round(mean_absolute_error(Y_val,y_pred), 2)\n",
+    "mse = round(mean_squared_error(Y_val,y_pred), 2)\n",
+    "mape = round(mean_absolute_percentage_error(Y_val,y_pred)*100,2)\n",
+    "r2 = round(r2_score(Y_val,y_pred) , 2)*100\n",
+    "rmse = round(math.sqrt(mse) , 2)\n",
+    "\n",
+    "\n",
+    "print(f\"MAE is: {mae}\")\n",
+    "print(f\"MSE is: {mse}\")\n",
+    "print(f\"MAPE is: {mape}\")\n",
+    "print(f\"R2 SCORE is: {r2}\")\n",
+    "print(f\"RMSE is: {rmse}\")\n",
+    "\n",
+    "df_metrics = df_metrics.append({'Algorithm':'XGB Regressor TEST', 'MAE €':mae, 'MSE €': mse,  'RMSE €': rmse, 'MAPE %': mape, 'R2 Score %': r2 }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00307b80-fa68-45dd-90e5-835ad699eceb",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## LGBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eed6949-030a-4a69-83a9-7d8ba12c156c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgbm = LGBMRegressor()\n",
+    "\n",
+    "param_grid ={\n",
+    "    'n_estimators': [50, 100, 150],\n",
+    "    'learning_rate': [0.01, 0.1, 1]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "grid_search = GridSearchCV(lgbm, param_grid, cv=5, scoring = 'neg_mean_squared_error') \n",
+    "\n",
+    "grid_search.fit(X_train , Y_train )\n",
+    "\n",
+    "print(grid_search.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d7ba7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.select_dtypes(include='object').columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e7008d-4c7e-48f2-ae2d-6eac5779c1a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With the LGBM algorithm numerical variables need to be trasnformed into float variables\n",
+    "# X_train = X_train.astype(float)\n",
+    "# X_val = X_val.astype(float)\n",
+    "# Y_train = Y_train.astype(float)\n",
+    "# # Y_val = Y_val.astype(float)\n",
+    "\n",
+    "\n",
+    "lgbm = LGBMRegressor(n_estimators= 150 ,learning_rate=0.1)\n",
+    "lgbm.fit(X_train , Y_train )\n",
+    "\n",
+    "y_train_pred = lgbm.predict(X_train)\n",
+    "\n",
+    "mae = round( mean_absolute_error(Y_train,y_train_pred), 2)\n",
+    "mse = round(mean_squared_error(Y_train,y_train_pred), 2)\n",
+    "mape = round(mean_absolute_percentage_error(Y_train,y_train_pred)*100,2)\n",
+    "r2 = round(r2_score(Y_train,y_train_pred)*100,2)\n",
+    "rmse = round(math.sqrt(mse), 2)\n",
+    "\n",
+    "\n",
+    "print(f\"MAE is: {mae}\")\n",
+    "print(f\"MSE is: {mse}\")\n",
+    "print(f\"MAPE is: {mape}\")\n",
+    "print(f\"R2 SCORE is: {r2}\")\n",
+    "print(f\"RMSE is: {rmse}\")\n",
+    "\n",
+    "df_metrics = df_metrics.append({'Algorithm':'LGBM Regressor TRAIN', 'MAE €':mae, 'MSE €': mse,  'RMSE €': rmse, 'MAPE %': mape, 'R2 Score %': r2 }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2eb2df2-31cc-474c-9e77-a3fb00c65d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = lgbm.predict(X_test)\n",
+    "\n",
+    "mae = round(mean_absolute_error(Y_val,y_pred), 2)\n",
+    "mse = round(mean_squared_error(Y_val,y_pred), 2)\n",
+    "mape = round(mean_absolute_percentage_error(Y_val,y_pred)*100,2)\n",
+    "r2 = round(r2_score(Y_val,y_pred), 2)*100\n",
+    "rmse =round( math.sqrt(mse), 2)\n",
+    "\n",
+    "\n",
+    "print(f\"MAE is: {mae}\")\n",
+    "print(f\"MSE is: {mse}\")\n",
+    "print(f\"MAPE is: {mape}\")\n",
+    "print(f\"R2 SCORE is: {r2}\")\n",
+    "print(f\"RMSE is: {rmse}\")\n",
+    "\n",
+    "df_metrics = df_metrics.append({'Algorithm':'LGBM Regressor TEST', 'MAE €':mae, 'MSE €': mse,  'RMSE €': rmse, 'MAPE %': mape, 'R2 Score %': r2 }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc3974b1-40d5-4769-9723-70da212778ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fbf93af-08db-436c-ae19-c92a643744be",
+   "metadata": {},
+   "source": [
+    "##### Observation:\n",
+    "\n",
+    "We can see that the model built with the XGB Regressor is the best performing one among the models used, because it obtained the minimum score of MAE (277.89 €), MSE (153864.50 €), RMSE (392.26 €), and the highest R2 score (62%). \n",
+    "\n",
+    "Nevertheless, we can see that the absolute errors are high due to the high variance among Price and Surface variables. Other reasons can be the fact that there are 20 different rent markets from the 20 different cities selected and that the several housing unit types with distinctive characteristcs are considered. All of these may increase the Price variance."
+   ]
   }
  ],
  "metadata": {
