--- a/001_v1_lgbm_baseline.ipynb
+++ b/001_v1_lgbm_baseline.ipynb
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 143,
    "id": "74e7008d-4c7e-48f2-ae2d-6eac5779c1a7",
    "metadata": {},
    "outputs": [
@@ -1208,8 +1208,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000515 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000180 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 231\n",
       "[LightGBM] [Info] Number of data points in the train set: 7630, number of used features: 9\n",
       "[LightGBM] [Info] Start training from score 1181.482831\n",
@@ -1233,8 +1234,8 @@
     "\n",
     "num  = 2\n",
     "\n",
-    "lgbm = LGBMRegressor(**params_2)\n",
-    "lgbm.fit(X_train , Y_train )\n",
+    "lgbm_model = LGBMRegressor(**params_2)\n",
+    "lgbm_model.fit(X_train , Y_train )\n",
     "\n",
     "y_train_pred = lgbm.predict(X_train)\n",
     "\n",
@@ -1254,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "f003a3f5",
    "metadata": {},
    "outputs": [],
@@ -1264,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 139,
    "id": "e02f07c1",
    "metadata": {},
    "outputs": [
@@ -1301,11 +1302,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LGBM Regressor params_1 no OUTLIERS TRAIN</td>\n",
-       "      <td>153.74</td>\n",
-       "      <td>47273.93</td>\n",
-       "      <td>217.43</td>\n",
-       "      <td>12.36</td>\n",
-       "      <td>88.00</td>\n",
+       "      <td>128.17</td>\n",
+       "      <td>31960.32</td>\n",
+       "      <td>178.77</td>\n",
+       "      <td>10.65</td>\n",
+       "      <td>92.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1319,6 +1320,24 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>LGBM Regressor params_2 no OUTLIERS TRAIN</td>\n",
+       "      <td>128.17</td>\n",
+       "      <td>31960.32</td>\n",
+       "      <td>178.77</td>\n",
+       "      <td>10.65</td>\n",
+       "      <td>92.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LGBM Regressor params_2 no OUTLIERS VAL</td>\n",
+       "      <td>153.74</td>\n",
+       "      <td>47273.93</td>\n",
+       "      <td>217.43</td>\n",
+       "      <td>12.36</td>\n",
+       "      <td>88.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LGBM Regressor params_2 no OUTLIERS TRAIN</td>\n",
        "      <td>138.60</td>\n",
        "      <td>37234.34</td>\n",
        "      <td>192.96</td>\n",
@@ -1331,17 +1350,21 @@
       ],
       "text/plain": [
        "                                   Algorithm   MAE €     MSE €  RMSE €  \\\n",
-       "0  LGBM Regressor params_1 no OUTLIERS TRAIN  153.74  47273.93  217.43   \n",
+       "0  LGBM Regressor params_1 no OUTLIERS TRAIN  128.17  31960.32  178.77   \n",
        "1    LGBM Regressor params_1 no OUTLIERS VAL  153.74  47273.93  217.43   \n",
-       "2  LGBM Regressor params_2 no OUTLIERS TRAIN  138.60  37234.34  192.96   \n",
+       "2  LGBM Regressor params_2 no OUTLIERS TRAIN  128.17  31960.32  178.77   \n",
+       "3    LGBM Regressor params_2 no OUTLIERS VAL  153.74  47273.93  217.43   \n",
+       "4  LGBM Regressor params_2 no OUTLIERS TRAIN  138.60  37234.34  192.96   \n",
        "\n",
        "   MAPE %  R2 Score %  \n",
-       "0   12.36       88.00  \n",
+       "0   10.65       92.33  \n",
        "1   12.36       88.00  \n",
-       "2   11.41       91.06  "
+       "2   10.65       92.33  \n",
+       "3   12.36       88.00  \n",
+       "4   11.41       91.06  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 144,
    "id": "f2eb2df2-31cc-474c-9e77-a3fb00c65d7f",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1402,7 @@
     }
    ],
    "source": [
-    "y_pred = lgbm.predict(X_val)\n",
+    "y_pred = lgbm_model.predict(X_val)\n",
     "\n",
     "mae = round(mean_absolute_error(Y_val,y_pred), 2)\n",
     "mse = round(mean_squared_error(Y_val,y_pred), 2)\n",
@@ -1397,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 141,
    "id": "ea2959ef",
    "metadata": {},
    "outputs": [],
@@ -1414,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 142,
    "id": "ff881a0c",
    "metadata": {},
    "outputs": [
@@ -1451,11 +1474,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LGBM Regressor params_1 no OUTLIERS TRAIN</td>\n",
-       "      <td>153.74</td>\n",
-       "      <td>47273.93</td>\n",
-       "      <td>217.43</td>\n",
-       "      <td>12.36</td>\n",
-       "      <td>88.00</td>\n",
+       "      <td>128.17</td>\n",
+       "      <td>31960.32</td>\n",
+       "      <td>178.77</td>\n",
+       "      <td>10.65</td>\n",
+       "      <td>92.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1469,6 +1492,24 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>LGBM Regressor params_2 no OUTLIERS TRAIN</td>\n",
+       "      <td>128.17</td>\n",
+       "      <td>31960.32</td>\n",
+       "      <td>178.77</td>\n",
+       "      <td>10.65</td>\n",
+       "      <td>92.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LGBM Regressor params_2 no OUTLIERS VAL</td>\n",
+       "      <td>153.74</td>\n",
+       "      <td>47273.93</td>\n",
+       "      <td>217.43</td>\n",
+       "      <td>12.36</td>\n",
+       "      <td>88.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LGBM Regressor params_2 no OUTLIERS TRAIN</td>\n",
        "      <td>138.60</td>\n",
        "      <td>37234.34</td>\n",
        "      <td>192.96</td>\n",
@@ -1476,7 +1517,7 @@
        "      <td>91.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>5</th>\n",
        "      <td>LGBM Regressor params_2 no OUTLIERS VAL</td>\n",
        "      <td>152.39</td>\n",
        "      <td>45912.68</td>\n",
@@ -1490,19 +1531,23 @@
       ],
       "text/plain": [
        "                                   Algorithm   MAE €     MSE €  RMSE €  \\\n",
-       "0  LGBM Regressor params_1 no OUTLIERS TRAIN  153.74  47273.93  217.43   \n",
+       "0  LGBM Regressor params_1 no OUTLIERS TRAIN  128.17  31960.32  178.77   \n",
        "1    LGBM Regressor params_1 no OUTLIERS VAL  153.74  47273.93  217.43   \n",
-       "2  LGBM Regressor params_2 no OUTLIERS TRAIN  138.60  37234.34  192.96   \n",
-       "3    LGBM Regressor params_2 no OUTLIERS VAL  152.39  45912.68  214.27   \n",
+       "2  LGBM Regressor params_2 no OUTLIERS TRAIN  128.17  31960.32  178.77   \n",
+       "3    LGBM Regressor params_2 no OUTLIERS VAL  153.74  47273.93  217.43   \n",
+       "4  LGBM Regressor params_2 no OUTLIERS TRAIN  138.60  37234.34  192.96   \n",
+       "5    LGBM Regressor params_2 no OUTLIERS VAL  152.39  45912.68  214.27   \n",
        "\n",
        "   MAPE %  R2 Score %  \n",
-       "0   12.36       88.00  \n",
+       "0   10.65       92.33  \n",
        "1   12.36       88.00  \n",
-       "2   11.41       91.06  \n",
-       "3   12.18       88.00  "
+       "2   10.65       92.33  \n",
+       "3   12.36       88.00  \n",
+       "4   11.41       91.06  \n",
+       "5   12.18       88.00  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,10 +1558,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "dc3974b1-40d5-4769-9723-70da212778ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Algorithm</th>\n",
+       "      <th>MAE €</th>\n",
+       "      <th>MSE €</th>\n",
+       "      <th>RMSE €</th>\n",
+       "      <th>MAPE %</th>\n",
+       "      <th>R2 Score %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LGBM Regressor params_1 TRAIN</td>\n",
+       "      <td>188.61</td>\n",
+       "      <td>94206.71</td>\n",
+       "      <td>306.93</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>94.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LGBM Regressor params_1 VAL</td>\n",
+       "      <td>227.60</td>\n",
+       "      <td>169990.52</td>\n",
+       "      <td>412.30</td>\n",
+       "      <td>12.92</td>\n",
+       "      <td>90.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LGBM Regressor params_2 TRAIN</td>\n",
+       "      <td>203.54</td>\n",
+       "      <td>114836.86</td>\n",
+       "      <td>338.88</td>\n",
+       "      <td>12.65</td>\n",
+       "      <td>92.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LGBM Regressor params_2 VAL</td>\n",
+       "      <td>223.28</td>\n",
+       "      <td>164476.75</td>\n",
+       "      <td>405.56</td>\n",
+       "      <td>12.77</td>\n",
+       "      <td>90.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Algorithm   MAE €      MSE €  RMSE €  MAPE %  \\\n",
+       "0  LGBM Regressor params_1 TRAIN  188.61   94206.71  306.93   11.99   \n",
+       "1    LGBM Regressor params_1 VAL  227.60  169990.52  412.30   12.92   \n",
+       "2  LGBM Regressor params_2 TRAIN  203.54  114836.86  338.88   12.65   \n",
+       "4    LGBM Regressor params_2 VAL  223.28  164476.75  405.56   12.77   \n",
+       "\n",
+       "   R2 Score %  \n",
+       "0       94.16  \n",
+       "1       90.00  \n",
+       "2       92.88  \n",
+       "4       90.00  "
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_metrics_outliers"
    ]
@@ -1730,12 +1864,285 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45965ae6",
+   "metadata": {},
+   "source": [
+    "# Saving the Pickle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "1856f037",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['models/lgbm_regressor_v1.pkl']"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(\n",
+    "    {\n",
+    "        \"model\": lgbm_model,\n",
+    "        \"features\": X_train.columns.tolist(),\n",
+    "        \"pandas_version\": pd.__version__\n",
+    "    },\n",
+    "    \"models/lgbm_regressor_v1.pkl\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feb450e6",
+   "metadata": {},
+   "source": [
+    "# Load pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "1928435f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_model(path):\n",
+    "    artifact = joblib.load(path)\n",
+    "    return artifact[\"model\"], artifact[\"features\"], artifact[\"pandas_version\"]\n",
+    "\n",
+    "model, features, version = load_model(\"models/lgbm_regressor_v1.pkl\")\n",
+    "print(version)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "959c7f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Surface', 'City', 'Housing_unit', 'city_size', 'macroregion', 'floor',\n",
+       "       'num_rooms', 'rent_bracket', 'surface_bracket'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb08b5cd",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'Surface', 'City', 'Housing_unit', #'city_size', 'macroregion', \n",
+    "'floor',  'num_rooms', #'rent_bracket', 'surface_bracket'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eff64bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_input(features):\n",
+    "    user_data = {}\n",
+    "    for feature in features:\n",
+    "        user_data[feature] = float(input(f\"Enter value for {feature}: \"))\n",
+    "    return pd.DataFrame([user_data])\n",
+    "\n",
+    "X_user = get_user_input(features)\n",
+    "price = model.predict(X_user)[0]\n",
+    "\n",
+    "print(f\"\\n💰 Predicted price: € {price:,.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca89043",
+   "metadata": {},
+   "source": [
+    "## features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd84b2ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_size = {\n",
+    "    \"Roma\": \"big\",\n",
+    "    \"Milano\": \"big\",\n",
+    "    \"Napoli\": \"big\",\n",
+    "\n",
+    "    \"Torino\": \"mid-big\",\n",
+    "    \"Palermo\": \"mid-big\",\n",
+    "    \"Genova\": \"mid-big\",\n",
+    "\n",
+    "    \"Bologna\": \"mid\",\n",
+    "    \"Firenze\": \"mid\",\n",
+    "    \"Bari\": \"mid\",\n",
+    "    \"Catania\": \"mid\",\n",
+    "    \"Verona\": \"mid\",\n",
+    "    \"Venezia\": \"mid\",\n",
+    "    \"Messina\": \"mid\",\n",
+    "    \"Padova\": \"mid\",\n",
+    "    \"Trieste\": \"mid\",\n",
+    "    \"Brescia\": \"mid\",\n",
+    "    \"Taranto\": \"mid\",\n",
+    "    \"Prato\": \"mid\",\n",
+    "\n",
+    "    \"Parma\": \"mid-small\",\n",
+    "    \"Modena\": \"mid-small\"\n",
+    "}\n",
+    "\n",
+    "df_italia[\"city_size\"] = df_italia[\"City\"].map(city_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f6f7f36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "city_macroregion = {\n",
+    "    \"Milano\": \"north\",\n",
+    "    \"Torino\": \"north\",\n",
+    "    \"Genova\": \"north\",\n",
+    "    \"Bologna\": \"north\",\n",
+    "    \"Verona\": \"north\",\n",
+    "    \"Venezia\": \"north\",\n",
+    "    \"Padova\": \"north\",\n",
+    "    \"Trieste\": \"north\",\n",
+    "    \"Parma\": \"north\",\n",
+    "    \"Brescia\": \"north\",\n",
+    "    \"Modena\": \"north\",\n",
+    "\n",
+    "    \"Prato\": \"center\",\n",
+    "    \"Roma\": \"center\",\n",
+    "    \"Firenze\": \"center\",\n",
+    "\n",
+    "    \"Napoli\": \"south\",\n",
+    "    \"Palermo\": \"south\",\n",
+    "    \"Bari\": \"south\",\n",
+    "    \"Catania\": \"south\",\n",
+    "    \"Messina\": \"south\",\n",
+    "    \"Taranto\": \"south\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "df_italia[\"macroregion\"] = df_italia[\"City\"].map(city_macroregion)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a29ac5a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "bins = [-np.inf, 40, 70, 100, 200, 400, np.inf]\n",
+    "labels = [\n",
+    "    \"very small\",\n",
+    "    \"small\",\n",
+    "    \"mid-small\",\n",
+    "    \"mid\",\n",
+    "    \"large\",\n",
+    "    \"very large\"\n",
+    "]\n",
+    "\n",
+    "df_italia[\"surface_bracket\"] = pd.cut(\n",
+    "    df_italia[\"Surface\"],\n",
+    "    bins=bins,\n",
+    "    labels=labels,\n",
+    "    right=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac5c6c9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "bins = [-float(\"inf\"), 450, 700, 1000, 2000, 4000, float(\"inf\")]\n",
+    "labels = [\n",
+    "    \"very low\",\n",
+    "    \"low\",\n",
+    "    \"mid-low\",\n",
+    "    \"mid-high\",\n",
+    "    \"high\",\n",
+    "    \"very high\"\n",
+    "]\n",
+    "\n",
+    "df_italia[\"rent_bracket\"] = pd.cut(\n",
+    "    df_italia[\"Price\"],\n",
+    "    bins=bins,\n",
+    "    labels=labels,\n",
+    "    right=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920411d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_to_rooms = {\n",
+    "    'Monolocale': '1',\n",
+    "    'Appartamento': '5',\n",
+    "    'Attico': '3',\n",
+    "    'Casale': '3',\n",
+    "    'Loft': '2',\n",
+    "    'Mansarda': '2',\n",
+    "    'Open space': '2',\n",
+    "    'Palazzo': '5+',\n",
+    "    'Terratetto': '5+',\n",
+    "    'Villa': '5+'\n",
+    "}\n",
+    "\n",
+    "df_italia['N_rooms'] = df_italia['N_rooms'].fillna(\n",
+    "    df_italia['Housing_unit'].map(housing_to_rooms)\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
