--- a/001_v1_lgbm_baseline.ipynb
+++ b/001_v1_lgbm_baseline.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "557e0c38-2d1c-413d-a740-30753f7e599a",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "385a0816",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "[10667 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "be4c728e-5217-4922-88b5-eae22d7b2455",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b45c6218-df18-4eca-8224-1cf1f569a6a6",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a174e2da-bfb6-4bae-b139-c878601f8776",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1b41d312-ac7e-482f-a29a-b76ca6f0e507",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "194c717c-0db3-43ae-8099-d49b26dcdd0c",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "(24, 0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ba1275e8-abff-4e55-b0e5-98cb7a601917",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3723d374-e0b9-4685-84c8-9cbea02415f1",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "(10643, 10)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "12caa1fc-b98a-41eb-a18e-ed88ce101d83",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
        "5          4         high             mid  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "01cff0e7-a0af-42e3-a7b8-abbb88ed8766",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "(9421, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "50b9050a-9185-428c-8197-edb34ce28476",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9db971fe-cba2-408d-93f9-7543c7acdba9",
    "metadata": {},
    "outputs": [
@@ -664,6 +664,35 @@
     "plt.hist(df_cleaned['Surface'], bins = 30)\n",
     "plt.title('Surface distribution after outliers removal');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "981db726",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Monolocale', 'Bilocale', 'Quadrilocale', 'Trilocale',\n",
+       "       'Appartamento', 'Attico', 'Mansarda', 'Loft', 'Open space',\n",
+       "       'Villa', 'Palazzo', 'Casale', 'Terratetto'], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned.Housing_unit.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99ffe914",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
